test/error_quality_fixtures/parse/reserved_word_binding.out
cmd: medaka check
exit: 1
---
test/error_quality_fixtures/parse/reserved_word_binding.mdk:2:0: Parse error
