test/error_quality_fixtures/parse/reserved_word_binding.mdk
match = 5
main = println (debug match)
